configure_infra/roles/ingress/templates/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-web-server
  name: simple-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-server
  template:
    metadata:
      labels:
        app: simple-web-server
    spec:
      containers:
      - image: httpd:alpine
        name: webserver
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/apache2/htdocs/index.html
          subPath: index.html
      volumes:
        - name: config-volume
          configMap:
            name: web-content
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: simple-web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
